@@ -173,6 +173,9 @@
                     </systemPropertyVariables>
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
+                    <argLine>
+                        -Djdk.attach.allowAttachSelf
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
